[tool.poetry]
name = "chat-with-pdfs"
version = "0.1.0"
description = ""
authors = ["Artur Das <me@artur.wtf>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.1"
langchain = "^0.1.12"
python-dotenv = "^1.0.1"
qdrant-client = "^1.8.0"
openai = "^1.13.3"
huggingface-hub = "^0.21.4"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.4"
pypdf2 = "^3.0.1"
langchain-community = "^0.0.28"
langchain-core = "^0.1.31"
langchain-openai = "^0.0.8"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
ipdb = "^0.13.13"
black = "^24.2.0"
pyright = "^1.1.353"
watchdog = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
